Added upload service.

--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -1,7 +1,12 @@
 {
-	"cosmosAccount": "",
-	"storageAccount": "",
-	"cosmosAccessKey": "",
-    "searchAccount": "",
-    "searchKey":""
+    "cosmosAccount":  "",
+    "storageAccount":  "",
+    "cosmosAccessKey":  "",
+    "searchAccount":  "",
+    "searchKey":  "",
+    "logicAppTrigger1":  "",
+    "logicAppTrigger2":  "",
+    "w2Model":  "",
+    "financialModel":  "",
+    "storageSas":  ""
 }
