--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^9.0.0-next.0",
     "@angular/platform-browser-dynamic": "^9.0.0-next.0",
     "@angular/router": "^9.0.0-next.0",
+    "@azure/storage-blob": "^10.4.0",
     "@icon/ionicons": "^4.5.8",
     "@types/crypto-js": "^3.1.43",
     "@types/es6-shim": "^0.31.39",
